create domain for evento and ingresso